--- a/.gitignore
+++ b/.gitignore
@@ -72,6 +72,7 @@ Thumbs.db
 ###################################
 # Richard... have mercy. We're trying to right our wrongs!
 **/appsettings.json
+**/appsettings.Development.json
 
 # User-specific files
 *.user
