feat: Add ApplicationContextFactory and generate Migrations and SQL file for intitial DB setup

--- a/Lit.Server/Lit.Server.Data/Lit.Server.Data.csproj
+++ b/Lit.Server/Lit.Server.Data/Lit.Server.Data.csproj
@@ -14,10 +14,16 @@
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.16" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Lit.Server.Logic\Lit.Server.Logic.csproj" />
   </ItemGroup>
-
+<!-- 
+<ItemGroup>
+  <None Update="appsettings.json">
+    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+  </None>
+</ItemGroup> -->
 </Project>
