feat: Add BooksController; remove unnecessary code from ApplicationContext that prevented successful build

--- a/Lit.Server/Lit.Server.Data/Lit.Server.Data.csproj
+++ b/Lit.Server/Lit.Server.Data/Lit.Server.Data.csproj
@@ -20,10 +20,10 @@
   <ItemGroup>
     <ProjectReference Include="..\Lit.Server.Logic\Lit.Server.Logic.csproj" />
   </ItemGroup>
-<!-- 
+
 <ItemGroup>
   <None Update="appsettings.json">
     <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
   </None>
-</ItemGroup> -->
+</ItemGroup>
 </Project>
