--- a/.github/workflows/feat-models_omega-green.yml
+++ b/.github/workflows/feat-models_omega-green.yml
@@ -8,7 +8,8 @@ on:
     branches:
       - feat-models
   workflow_dispatch:
-
+env:
+  WORKING_DIR: Lit.Server/Lit.Server.Api
 jobs:
   build:
     runs-on: windows-latest
@@ -19,14 +20,14 @@ jobs:
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: '7.x'
+          dotnet-version: "7.x"
           include-prerelease: true
 
       - name: Build with dotnet
-        run: dotnet build --configuration Release
+        run: dotnet build ${{env.WORKING_DIR}} --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
+        un: dotnet publish ${{env.WORKING_DIR}} -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
@@ -38,7 +39,7 @@ jobs:
     runs-on: windows-latest
     needs: build
     environment:
-      name: 'Production'
+      name: "Production"
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
       id-token: write #This is required for requesting the JWT
@@ -48,7 +49,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: .net-app
-      
+
       - name: Login to Azure
         uses: azure/login@v1
         with:
@@ -60,7 +61,6 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
-          app-name: 'omega-green'
-          slot-name: 'Production'
+          app-name: "omega-green"
+          slot-name: "Production"
           package: .
-          
