--- a/.github/workflows/feat-models_omega-green.yml
+++ b/.github/workflows/feat-models_omega-green.yml
@@ -27,7 +27,7 @@ jobs:
         run: dotnet build ${{env.WORKING_DIR}} --configuration Release
 
       - name: dotnet publish
-        un: dotnet publish ${{env.WORKING_DIR}} -c Release -o ${{env.DOTNET_ROOT}}/myapp
+        run: dotnet publish ${{env.WORKING_DIR}} -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
