Feat: Functional SearchBox
added proxy. Ask Lawrence for more information on how to access the LitAPI with the proxy if your methods aren't returning data

--- a/Lit.Client/Lit.Client.App/angular.json
+++ b/Lit.Client/Lit.Client.App/angular.json
@@ -67,12 +67,15 @@
               "browserTarget": "Lit.Client.App:build:development"
             }
           },
-          "defaultConfiguration": "development"
+          "defaultConfiguration": "development",
+          "options": {
+          "proxyConfig": "proxy.conf.json"
+          }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "Lit.Client.App:build"
+            "browserTarget": "Lit.Client.App:build",
           }
         },
         "test": {
