--- a/Lit.Client/Lit.Client.App/angular.json
+++ b/Lit.Client/Lit.Client.App/angular.json
@@ -69,13 +69,14 @@
           },
           "defaultConfiguration": "development",
           "options": {
-          "proxyConfig": "proxy.conf.json"
+          
+            "proxyConfig": "proxy.conf.json"
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "Lit.Client.App:build",
+            "browserTarget": "Lit.Client.App:build"
           }
         },
         "test": {
