chore: Add feat-auth branch to GitHub Actions on-push action

--- a/.github/workflows/feat-models_omega-green.yml
+++ b/.github/workflows/feat-models_omega-green.yml
@@ -7,6 +7,7 @@ on:
   push:
     branches:
       - feat-models # temporary until we've merged into main
+      - feat-auth
       # TODO - main
   workflow_dispatch:
 env:
