--- a/Lit.Server/Lit.Server.Api/web.config
+++ b/Lit.Server/Lit.Server.Api/web.config
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <configuration>
-  <system.webServer>
-    <handlers>
-      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
-      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-    </handlers>
-  </system.webServer>
+  <modules>
+  <remove name="WebDAVModule" />
+</modules>
+<handlers>
+  <remove name="WebDAV" />
+  <remove name="WebDAVModule" />
+</handlers>
 </configuration>
+
