--- a/Lit.Client/Lit.Client.App/package.json
+++ b/Lit.Client/Lit.Client.App/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@types/axios": "^0.14.0",
     "axios": "^1.6.8",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
